Update: .add class to .social_media class Remove: unnecessary switch statement in script.js

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span>to change the background color of this page!</span>
       </h2>
     </div>
-    <div class="add">
+    <div class="social_media">
       <h2>Follow</h2>
       <a
         target="_blank"
